force-app/main/default/objects/ManufacturingQuote__c/ManufacturingQuote__c.object-meta.xml
<CustomObject>
    <description>Represents a customer manufacturing quote used to track costs, pricing, margins, approvals, and quote status.</description>
    <label>Manufacturing Quote</label>
    <nameField>
        <displayFormat>MQ-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>