force-app/main/default/objects/ManufacturingQuote__c/fields/LaborCost__c.field-meta.xml
<CustomField>
    <fullName>LaborCost__c</fullName>
    <description>Estimated total labor cost for the manufacturing quote.</description>
    <inlineHelpText>Enter the estimated labor cost for this quote.</inlineHelpText>
    <label>Labor Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>