force-app/main/default/objects/ManufacturingQuote__c/fields/MarginAmount__c.field-meta.xml
<CustomField>
    <fullName>MarginAmount__c</fullName>
    <description>Calculated gross margin amount for the manufacturing quote.</description>
    <formula>BLANKVALUE(QuotedPrice__c, 0) - BLANKVALUE(TotalCost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as Quoted Price minus Total Cost.</inlineHelpText>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>