force-app/main/default/objects/ManufacturingQuote__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <description>Calculated gross margin percentage for the manufacturing quote.</description>
    <formula>IF(BLANKVALUE(QuotedPrice__c, 0) = 0, 0, BLANKVALUE(MarginAmount__c, 0) / QuotedPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as Margin Amount divided by Quoted Price.</inlineHelpText>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>