force-app/main/default/objects/ManufacturingQuote__c/fields/MaterialCost__c.field-meta.xml
<CustomField>
    <fullName>MaterialCost__c</fullName>
    <description>Estimated total material cost for the manufacturing quote.</description>
    <inlineHelpText>Enter the estimated material cost for this quote.</inlineHelpText>
    <label>Material Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>