force-app/main/default/objects/ManufacturingQuote__c/fields/QuotedPrice__c.field-meta.xml
<CustomField>
    <fullName>QuotedPrice__c</fullName>
    <description>Total price quoted to the customer for the manufacturing work.</description>
    <inlineHelpText>Enter the total customer-facing price for this quote.</inlineHelpText>
    <label>Quoted Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>