force-app/main/default/objects/ManufacturingQuote__c/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <description>Tracks the current stage of a manufacturing quote through the quoting and approval process.</description>
    <inlineHelpText>Select the current stage of the quote, from Draft through Won or Lost.</inlineHelpText>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>