force-app/main/default/objects/ManufacturingQuote__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <description>Calculated total of material and labor costs for the manufacturing quote.</description>
    <formula>BLANKVALUE(MaterialCost__c, 0) + BLANKVALUE(LaborCost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated from Material Cost plus Labor Cost.</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>